<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.nightcoder.vehiclesearch.ui.features.onboarding.OnBoardingActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?colorPrimary"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <ImageButton
                android:id="@+id/backBtn"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintDimensionRatio="1"
                android:background="?selectableItemBackground"
                android:contentDescription="@string/empty_content_desc"
                android:src="@drawable/ic_back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/search_tool"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="@dimen/_20ssp"
                android:title="@string/new_feature" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@id/appbar">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="32dp"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center"
            android:text="@string/search_tool_header"
            android:textColor="@color/white"
            android:textSize="@dimen/_26ssp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_42sdp">

            <LinearLayout
                android:id="@+id/searchPrefix"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:background="@color/blue"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingHorizontal="@dimen/_10sdp"
                app:layout_constraintBaseline_toBottomOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/empty_content_desc"
                    android:src="@drawable/ic_flag_gb" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:text="@string/gb"
                    android:textColor="@color/yellow"
                    android:textSize="@dimen/_14ssp" />
            </LinearLayout>

            <EditText
                android:id="@+id/searchField"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginEnd="@dimen/_4sdp"
                android:importantForAutofill="no"
                android:background="@color/white"
                android:fontFamily="@font/roboto_medium"
                android:hint="@string/enter_reg"
                android:textAllCaps="true"
                android:inputType="text"
                android:paddingHorizontal="12dp"
                android:textColor="#DD000000"
                android:textColorHint="#99171717"
                android:textSize="@dimen/_18ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/searchBtn"
                app:layout_constraintStart_toEndOf="@id/searchPrefix"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/searchBtn"
                android:layout_width="@dimen/_60sdp"
                android:layout_height="0dp"
                android:background="@color/search_btn_bg"
                android:fontFamily="@font/roboto_bold"
                android:gravity="center"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:text="@string/go"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="@dimen/_20ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp">

            <ProgressBar
                android:id="@+id/progressbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_56sdp"
                android:indeterminateDrawable="@drawable/custom_progress_bar"
                android:visibility="gone" />

            <androidx.cardview.widget.CardView
                android:id="@+id/resultView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:cardBackgroundColor="#262626">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_12sdp"
                        android:background="@color/green" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="12dp"
                        android:paddingEnd="@dimen/_12sdp"
                        android:paddingBottom="@dimen/_12sdp"
                        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                        app:spanCount="2"
                        tools:itemCount="8"
                        tools:listitem="@layout/item_vehicle_info" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/errorView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_32sdp"
                android:fontFamily="@font/roboto_regular"
                android:gravity="center"
                android:text="@string/search_error_msg"
                android:textSize="@dimen/_18ssp"
                android:visibility="gone" />

        </FrameLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>